kubernetes/fluxcd/apps/base/frigate/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frigate.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: frigate
          port: 10500
    - match: Host(`frigate.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: frigate
          port: 10500
  tls:
    secretName: certificate-secret
